--- a/BlueGengine/BlueGengine/imgui.ini
+++ b/BlueGengine/BlueGengine/imgui.ini
@@ -4,7 +4,7 @@ Size=421,162
 Collapsed=0
 
 [ImGui Demo]
-Pos=65,2
+Pos=139,-1
 Size=550,680
 Collapsed=0
 
@@ -14,12 +14,17 @@ Size=191,123
 Collapsed=0
 
 [Profiling]
-Pos=2,59
+Pos=5,64
 Size=176,54
 Collapsed=0
 
 [Frame Info]
 Pos=5,5
-Size=176,29
+Size=169,29
+Collapsed=0
+
+[Console]
+Pos=0,0
+Size=800,600
 Collapsed=0
 
