--- a/BlueEngine/BlueEngine/Sandbox/Sandbox.vcxproj
+++ b/BlueEngine/BlueEngine/Sandbox/Sandbox.vcxproj
@@ -83,14 +83,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)\Intermediate\$(Platform)\$(ProjectName)\$(Configuration)\</IntDir>
-    <IncludePath>$(ProjectDir)..\BlueCore\Source\Public;$(ProjectDir)..\..\extern\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)..\BlueCore\Source\Public;$(ProjectDir)..\..\extern\Include;$(ProjectDir)\Source\Public\;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\extern\lib\$(Platform);$(LibraryPath)</LibraryPath>
     <SourcePath>$(ProjectDir)\Source\Private;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)\Intermediate\$(Platform)\$(ProjectName)\$(Configuration)\</IntDir>
-    <IncludePath>$(ProjectDir)..\BlueCore\Source\Public;$(ProjectDir)..\..\extern\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)..\BlueCore\Source\Public;$(ProjectDir)..\..\extern\Include;$(ProjectDir)\Source\Public\;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\extern\lib\$(Platform);$(LibraryPath)</LibraryPath>
     <SourcePath>$(ProjectDir)\Source\Private;$(SourcePath)</SourcePath>
   </PropertyGroup>
@@ -114,6 +114,9 @@
       <UndefinePreprocessorDefinitions>
       </UndefinePreprocessorDefinitions>
       <FunctionLevelLinking>true</FunctionLevelLinking>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
     <Link>
       <AdditionalDependencies>assimp.lib;FreeImage.lib;glew32.lib;glfw3.lib;opengl32.lib;BlueCoreD.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -142,6 +145,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <DisableSpecificWarnings>4201;</DisableSpecificWarnings>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -151,11 +156,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\Private\main.cpp" />
+    <ClCompile Include="Source\Private\SandboxApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlueCore\BlueCore.vcxproj">
       <Project>{f8f92045-d9dc-476c-aa6e-c886ad03d2f9}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\Public\SandboxApplication.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
