--- a/BlueEngine/BlueEngine/imgui.ini
+++ b/BlueEngine/BlueEngine/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Frame Info]
 Pos=5,5
-Size=197,29
+Size=197,32
 Collapsed=0
 
 [Console]
@@ -36,5 +36,10 @@ Collapsed=0
 [Debug Options]
 Pos=26,86
 Size=136,54
+Collapsed=0
+
+[Stats]
+Pos=60,60
+Size=389,273
 Collapsed=0
 
