--- a/BlueEngine/BlueEngine/BlueCore/BlueCore.vcxproj.filters
+++ b/BlueEngine/BlueEngine/BlueCore/BlueCore.vcxproj.filters
@@ -129,9 +129,6 @@
     <ClCompile Include="Source\Private\BlueCore\Managers\UpdateableManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Private\BlueCore\Memory\BlockAllocator.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Private\BlueCore\Renderers\DefferedRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -163,6 +160,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\Private\BlueCore\Systems\TaskSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Private\BlueCore\Managers\MemoryManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Private\BlueCore\Memory\BlockAllocator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Private\BlueCore\Core\ActorAllocator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -335,9 +341,6 @@
     <ClInclude Include="Source\Public\BlueCore\Managers\UpdateableManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Public\BlueCore\Memory\BlockAllocator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Public\BlueCore\Memory\IMemoryAllocator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -384,6 +387,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Public\BlueCore\BlueCore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Public\BlueCore\Managers\MemoryManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Public\BlueCore\Memory\SmallBlockAllocator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Public\BlueCore\Core\ActorAllocator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
