Fixed a few bugs and started to implement debug manager
Added the ability to track variables real time 
Added the ability to manipulate variables during run time
Fixed infinite loop in actor pool  manager

--- a/BlueEngine/BlueEngine/imgui.ini
+++ b/BlueEngine/BlueEngine/imgui.ini
@@ -34,12 +34,17 @@ Size=350,600
 Collapsed=0
 
 [Debug Options]
-Pos=207,617
-Size=32,31
+Pos=85,395
+Size=1035,623
 Collapsed=0
 
 [Stats]
 Pos=11,10
 Size=436,248
+Collapsed=0
+
+[Testing]
+Pos=355,424
+Size=228,58
 Collapsed=0
 
