Added The ability to removed debug variables and improved logging

--- a/BlueEngine/BlueEngine/BlueCore/BlueCore.vcxproj
+++ b/BlueEngine/BlueEngine/BlueCore/BlueCore.vcxproj
@@ -252,6 +252,7 @@
     <ClInclude Include="Source\Public\BlueCore\Components\FirstPersonComponent.h" />
     <ClInclude Include="Source\Public\BlueCore\Components\MaterialComponent.h" />
     <ClInclude Include="Source\Public\BlueCore\Core\ActorAllocator.h" />
+    <ClInclude Include="Source\Public\BlueCore\Core\Logger.h" />
     <ClInclude Include="Source\Public\BlueCore\Core\Transformable.h" />
     <ClInclude Include="Source\Public\BlueCore\Core\Application.h" />
     <ClInclude Include="Source\Public\BlueCore\Core\ApplicationWindow.h" />
